"deep-notify" signal gets emitted only from the main thread

https://bugzilla.gnome.org/show_bug.cgi?id=784414